--- a/hydra_page.html
+++ b/hydra_page.html
@@ -14,18 +14,15 @@
 document.addEventListener("visibilitychange", function() {
   if (document.visibilityState === 'hidden') {
     document.getElementById('spawner').click();
-   
+    document.getElementById('spawner').click();
   }
 });
 </script>
 </head>
 <body>
-    <a  target="_blank" href="http://localhost:3000/hydra_page.html">
+    <a  target="_blank" href="/hydra_page.html">
         <button style="visibility: hidden;" id="spawner"></button>    
     </a>
-
     <img src="https://image.shutterstock.com/image-vector/hydra-logo-mascot-vector-illustration-600w-1649035477.jpg" alt="hydra babyyyyyyy">
-
-
 </body>
 </html>
