--- a/public/quik_maffs.html
+++ b/public/quik_maffs.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="/favicon.png" />
     <script>
       function solve() {
         var test = document.getElementById("input_text2").value;
