--- a/public/symptoms.html
+++ b/public/symptoms.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Rainbow Bootstrap 4.0 Theme by templatemo</title>
-    <!--
-Rainbow Theme
-http://www.templatemo.com/tm-485-rainbow
--->
+    <!-- Rainbow Theme http://www.templatemo.com/tm-485-rainbow -->
     <!-- load stylesheets -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400"
     />
+    <link rel="icon" href="/favicon.png" />
     <!-- Google web font "Open Sans" -->
-    <link rel="stylesheet" href="font-awesome-4.5.0/css/font-awesome.min.css" />
+    <link
+      rel="stylesheet"
+      href="/font-awesome-4.5.0/css/font-awesome.min.css"
+    />
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <!-- Bootstrap style -->
-    <link rel="stylesheet" href="css/templatemo-style.css" />
+    <link rel="stylesheet" href="/css/templatemo-style.css" />
     <!-- Templatemo style -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
