--- a/public/hydra_page.html
+++ b/public/hydra_page.html
@@ -21,12 +21,9 @@
     </script>
   </head>
   <body>
-    <a target="_blank" href="/hydra_page.html">
+    <a target="_blank" href="/hydra.html">
       <button style="visibility: hidden" id="spawner"></button>
     </a>
-    <img
-      src="https://image.shutterstock.com/image-vector/hydra-logo-mascot-vector-illustration-600w-1649035477.jpg"
-      alt="hydra babyyyyyyy"
-    />
+    <img src="/img/hydra.png" width="800px" alt="hydra babyyyyyyy" />
   </body>
 </html>
