--- a/public/symptoms.html
+++ b/public/symptoms.html
@@ -44,7 +44,7 @@
                 text-xs-center
               "
             >
-              <h1 class="tm-site-title">professional healthcare consultant</h1>
+              <h1 class="tm-site-title">Professional Healthcare Consultant</h1>
             </div>
           </div>
         </div>
@@ -74,7 +74,7 @@
                   Do you experience medical issues?
                 </h2>
                 <p class="tm-2-col-text-description">
-                  scroll below to get a free professional diagnosis
+                  Scroll below to get a free professional diagnosis
                 </p>
               </div>
             </section>
@@ -86,9 +86,9 @@
                   tm-2-col-text
                 "
               >
-                <h2 class="tm-2-col-text-title">our technology</h2>
+                <h2 class="tm-2-col-text-title">Our Technology</h2>
                 <p class="tm-2-col-text-description">
-                  this technology is the highest quality medical systems anyone
+                  This technology is the highest quality medical systems anyone
                   could afford! we use state of the art machine learning
                   algorithms to expertly diagnose an issue and provide a helpful
                   solution.
@@ -113,10 +113,10 @@
             "
           >
             <h2 class="tm-section-title">
-              fill out this form for a free consultation
+              Fill out this form for a free consultation
             </h2>
             <p class="tm-section-subtitle tm-section-subtitle-contact">
-              please ensure you are accurate with the data you provide and also
+              Please ensure you are accurate with the data you provide and also
               fill every field to the best of your ability
             </p>
           </div>
@@ -137,7 +137,7 @@
                   tm-form-group-left
                 "
               >
-                <p style="text-align: center">do you have a pulse?</p>
+                <p style="text-align: center">Do you have a pulse?</p>
                 <input
                   type="text"
                   id="contact_name"
@@ -154,7 +154,7 @@
                   tm-form-group-left
                 "
               >
-                <p style="text-align: center">can you breathe?</p>
+                <p style="text-align: center">Can you breathe?</p>
                 <input
                   type="text"
                   id="contact_name"
@@ -172,7 +172,7 @@
                 "
               >
                 <br />
-                <p style="text-align: center">are you alive?</p>
+                <p style="text-align: center">Are you alive?</p>
                 <input
                   type="text"
                   id="contact_name"
@@ -190,7 +190,7 @@
                 "
               >
                 <p style="text-align: center">
-                  what are the last three digits on your credit card?
+                  What are the last three digits on your credit card?
                 </p>
                 <input
                   type="text"
@@ -209,7 +209,7 @@
                 "
               >
                 <br />
-                <p style="text-align: center">do you are have stupid?</p>
+                <p style="text-align: center">Do you are have stupid?</p>
                 <input
                   type="text"
                   id="contact_name"
@@ -227,7 +227,7 @@
                 "
               >
                 <p style="text-align: center">
-                  on a scale of 1 - 10.3 how serious would you say your
+                  On a scale of 1 - 10.3 how serious would you say your
                   condition is?
                 </p>
                 <input
@@ -286,7 +286,7 @@
               text-xs-center
             "
           >
-            <p class="tm-copyright-text">Copyright &copy; 2016 Your Company</p>
+            <p class="tm-copyright-text">Copyright &copy; 2021 Status Code 418 - I'm a Teapot</p>
           </footer>
         </div>
       </div>
