add bg for quik maffs

--- a/public/quik_maffs.html
+++ b/public/quik_maffs.html
@@ -19,7 +19,7 @@
     </script>
   </head>
   <body>
-    <div>
+    <div class="bg">
       <div class="vertical-horizontal-center">
         <h1>Qwik Maffs</h1>
         <h3>Need fast answers to math questions?</h3>
