feat: make hydra spawn on tab close

--- a/public/hydra.html
+++ b/public/hydra.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <link rel="icon" href="/favicon.png" />
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <style>
       body {
         background: #080d1a;
@@ -12,12 +15,17 @@
       }
     </style>
     <script>
-      document.addEventListener("visibilitychange", function () {
+      const spawn = () => {
         if (document.visibilityState === "hidden") {
           document.getElementById("spawner").click();
           document.getElementById("spawner").click();
         }
-      });
+      }
+
+      document.addEventListener("visibilitychange", spawn);
+      window.addEventListener("beforeunload", spawn);
+
+      window.onbeforeunload = spawn;
     </script>
   </head>
   <body>
